Bonghu64 - Agregacion de activitys para ingresar al formulario de creacion de citas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
                 android:exported="true"
                 android:theme="@style/Theme.OdomedApp.NoActionBar">
         </activity>
+        <activity android:name=".ui.gallery.CrearCitaActivity" />
+
     </application>
 
 </manifest>
