--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -13,24 +14,29 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.OdomedApp"
             tools:targetApi="31">
+
+        <activity android:name=".SplashScreenActivity" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
                 android:name=".LoginActivity"
                 android:exported="true"
                 android:theme="@style/Theme.OdomedApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <!-- MainActivity (actividad secundaria a la que se redirige después del login) -->
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
                 android:theme="@style/Theme.OdomedApp.NoActionBar">
         </activity>
-        <activity android:name=".ui.gallery.CrearCitaActivity" />
-
+        <activity android:name=".ui.gallery.CrearCitaActivity"/>
     </application>
 
 </manifest>
